# negy

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: cd-dev.yml  cd.yml  test.yml
negy-common/: Cargo.toml
negy-common/src/: aes.rs  encrypted_payload.rs  lib.rs  protocol.rs
negy-gateway/: Cargo.toml
negy-gateway/src/: gateway.rs  main.rs
negy-node/: Cargo.toml
negy-node-pool/: Cargo.toml
negy-node-pool/src/: main.rs  req.rs
negy-node/src/: main.rs  node.rs
provision-aws/: .gitignore  cdktf.json  main.ts  package-lock.json  package.json
provision-aws/lib/: index.ts  l4lb.ts  l7lb.ts  negy-service.ts  network.ts
