[package]
name = "negy-gateway"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.2"
clap = { version = "3.2", features = ["derive"] }
httparse = "1.8"
openssl = "0.10"
tokio = { version = "1.21", features = ["full"] }
reqwest = { version = "*", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
rand = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }
negy-common = { path = "../negy-common" }
negy-node-pool = { path = "../negy-node-pool" }
semver = "1.0.14"

[[bin]]
name = "negy-gateway"
path = "src/main.rs"
