[package]
name = "negy-node"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.2"
clap = { version = "3.2", features = ["derive"] }
openssl = "0.10"
tokio = { version = "1.21", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }
negy-common = { path = "../negy-common" }
negy-node-pool = { path = "../negy-node-pool" }

[[bin]]
name = "negy-node"
path = "src/main.rs"